# BioTrakr

./: .env.example  .gitignore  .npmrc  IMPLEMENTATION_COMPLETE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/ml-service/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
apps/ml-service/artifacts/: latest-model.joblib
apps/ml-service/mlruns/0/: meta.yaml
apps/ml-service/mlruns/0/259bbaf88e1f4393b29a7eac52b67b3a/: meta.yaml
apps/ml-service/mlruns/0/259bbaf88e1f4393b29a7eac52b67b3a/metrics/: accuracy  auc  f1
apps/ml-service/mlruns/0/259bbaf88e1f4393b29a7eac52b67b3a/tags/: mlflow.log-model.history
apps/ml-service/mlruns/0/87e0df480240425c93f15c6b60774e6c/: meta.yaml
apps/ml-service/mlruns/0/a3af416ea4e04b1a94d4477479ee30db/: meta.yaml
apps/ml-service/mlruns/0/a6dc6a2b0df84b2489cecc7c52f919f7/: meta.yaml
apps/ml-service/mlruns/0/e9fc66a4d4594ad99a57348d0bed9f35/: meta.yaml
apps/ml-service/mlruns/0/f94e27724ec54b7fa3bf4c6924f41506/: meta.yaml
apps/ml-service/mlruns/models/medasset-failure-risk/: meta.yaml
apps/ml-service/src/: main.py
apps/ml-service/src/api/: router.py
apps/ml-service/src/api/routes/: health.py  inference.py  training.py
apps/ml-service/src/core/: config.py  logging.py
apps/ml-service/src/models/: registry.py
apps/ml-service/src/schemas/: prediction.py  training.py
apps/ml-service/src/services/: data_loader.py  dataset_loader.py  trainer.py
apps/ml-service/tests/: conftest.py  test_inference.py  test_training.py
docs/: BIOTRAKR_UI_GUIDE.md  (+12 more)
(+215 files in other folders)
