[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = "MedAsset Pro ML microservice"
authors = ["MedAsset Team <dev@medasset.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
mlflow = "^2.16.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
joblib = "^1.4.2"
structlog = "^24.2.0"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.7.4"
mypy = "^1.13.0"
pre-commit = "^4.0.1"

[tool.poetry.scripts]
ml-service = "src.main:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C4"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
packages = ["src"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
